--- a/SWD/unit05 - Websockets/session5-2/rock-paper-scissors/client-side/index.html
+++ b/SWD/unit05 - Websockets/session5-2/rock-paper-scissors/client-side/index.html
@@ -11,7 +11,7 @@
       <div id="notificationBox"></div>
       <b>Score: </b><span id="scoreDisplay"></span>
       <hr>
-      <form id="RPSForm">
+      <form id="RPSForm" method="POST" action="/">
          <label for="userNameField">Your name:</label>
          <input id="userNameField" type="text"><br>
          <label for="choiceBox">Your choice:</label>
