--- a/SWD/unit05 - Websockets/session5-2/rock-paper-scissors-partial/client-side/index.html
+++ b/SWD/unit05 - Websockets/session5-2/rock-paper-scissors-partial/client-side/index.html
@@ -19,9 +19,9 @@
          <input id="userNameField" type="text"><br>
          <label for="choiceBox">Your choice:</label>
          <select id="choiceBox">
-            <option>Rock</option>
-            <option>Paper</option>
-            <option>Scissors</option>
+            <option>rock</option>
+            <option>paper</option>
+            <option>scissors</option>
          </select><br>
          <button id="SubmitChoiceButton">Submit Choice</button>
       </form>
